# Hodgepodge

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/caofu/hodgepodge/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 5_estrelas_go.json
app/src/main/cpp/: soundtouch_api.cpp  soundtouch_api.h
app/src/main/cpp/soundtouch/: TDStretch.cpp
app/src/main/java/com/cf/hodgepodge/: APPConstant.java  MyApplication.java
app/src/main/java/com/cf/hodgepodge/adapter/: GankITAdapter.java  HomeVpAdapter.java  NewsAdapter.java  WeiXinHotAdapter.java
app/src/main/java/com/cf/hodgepodge/annotation/: ActivityScope.java  FragmentScope.java
app/src/main/java/com/cf/hodgepodge/bean/: GankITBean.java  HomeArticleBean.java  NewsBean.java  ToHomeEvent.java  WeiXinHotBean.java  ZhiHuDailyBean.java  (+2 more)
app/src/main/res/drawable/: voice_boby.xml  voice_man.xml  voice_normal.xml  voice_wman.xml
app/src/main/res/layout/: activity_intro.xml  activity_main.xml  activity_zhi_hu_detail.xml  base_load_more.xml  custom_drawerlayout.xml  custom_loading_view.xml  drawer_header.xml  fragment_audio.xml  fragment_home.xml  fragment_news.xml  fragment_news_content.xml  fragment_wei_xin_hot.xml  fragment_wei_xin_it.xml  item_top_news.xml  item_wechat.xml  item_zhihu_daily.xml  item_zhihu_hot.xml  item_zhihu_theme.xml  item_zhihu_title.xml
app/src/main/res/menu/: drawer_menu.xml  main_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/caofu/hodgepodge/: ExampleUnitTest.java
(+55 files in other folders)
